chart created for results

--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Bus-mall</title>
     <!-- <link rel="stylesheet" href="css/reset.css"> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
     <header>
 
@@ -16,12 +18,18 @@
             <img id="rightImage" src="" alt="" width="250px">
         </div>
 
-        <div id="results"> 
+        <div id="results">
+            <canvas id="myChart"></canvas>
         </div>
+
     </main>
     <footer>
 
     </footer>
+
+    <!-- script for chart -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/app.js"></script>
 </body>
+
 </html>
